<resources>
    <string name="app_name">calculatorApp</string>
    <string name="bt_zero">0</string>
    <string name="bt_one">1</string>
    <string name="bt_two">2</string>
    <string name="bt_three">3</string>
    <string name="bt_four">4</string>
    <string name="bt_five">5</string>
    <string name="bt_six">6</string>
    <string name="bt_seven">7</string>
    <string name="bt_eight">8</string>
    <string name="bt_nine">9</string>
    <string name="bt_plus">+</string>
    <string name="bt_minus">-</string>
    <string name="bt_times">×</string>
    <string name="bt_divided">÷</string>
    <string name="bt_equals">=</string>
    <string name="bt_percent">%</string>
    <string name="bt_dot">.</string>
    <string name="bt_positiveOrNegative">+/-</string>
    <string name="bt_clear">C</string>
    <string name="bt_all_clear">AC</string>
    <string name="tv_result">0</string>
</resources>